Fixed register form sizing to prevent overflow

--- a/src/views/registerPage.css
+++ b/src/views/registerPage.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: center;
   width: 100%;
-  height: calc(100vh - 52px);
+  min-height: calc(100vh - 52px);
   /* background-color: #3aaf92; */
   background-color: rgb(236, 236, 236);
   box-sizing: border-box;
@@ -125,6 +125,7 @@
 }
 
 .registerButton {
+  margin-top: 25px;
   cursor: pointer;
   color: white;
   font-size: 1em;
